crates/rsub-api/tests/snapshots/snapshots__lyrics_list_empty_json.snap
---
source: crates/rsub-api/tests/snapshots.rs
expression: json
---
{
  "subsonic-response": {
    "lyricsList": {
      "structuredLyrics": []
    },
    "openSubsonic": true,
    "serverVersion": "[version]",
    "status": "ok",
    "type": "rs-subsonic",
    "version": "1.16.1"
  }
}
