crates/rsub-api/tests/snapshots/snapshots__lyrics_list_json.snap
---
source: crates/rsub-api/tests/snapshots.rs
expression: json
---
{
  "subsonic-response": {
    "lyricsList": {
      "structuredLyrics": [
        {
          "lang": "und",
          "line": [
            {
              "start": 1500,
              "value": "Oh, I know"
            },
            {
              "start": 4520,
              "value": ""
            }
          ],
          "synced": true
        },
        {
          "displayArtist": "A & B",
          "displayTitle": "Song",
          "lang": "eng",
          "line": [
            {
              "value": "Plain <line>"
            }
          ],
          "offset": -100,
          "synced": false
        }
      ]
    },
    "openSubsonic": true,
    "serverVersion": "[version]",
    "status": "ok",
    "type": "rs-subsonic",
    "version": "1.16.1"
  }
}
