crates/rsub-api/tests/snapshots/snapshots__lyrics_list_xml.snap
---
source: crates/rsub-api/tests/snapshots.rs
expression: xml
---
<?xml version="1.0" encoding="UTF-8"?>
<subsonic-response xmlns="http://subsonic.org/restapi" status="ok" version="1.16.1" type="rs-subsonic" serverVersion="[version]" openSubsonic="true"><lyricsList><structuredLyrics lang="und" synced="true"><line start="1500">Oh, I know</line><line start="4520"/></structuredLyrics><structuredLyrics displayArtist="A &amp; B" displayTitle="Song" lang="eng" offset="-100" synced="false"><line>Plain &lt;line&gt;</line></structuredLyrics></lyricsList></subsonic-response>
